[package]
name = "qkd_kme_key_spread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssss = "0.2.0"
rand = "0.8.5"
num-traits = "0.2.17"
num-integer = "0.1.45"
num-bigint = "0.4.4"
serde = "1.0.195"
postcard = { version = "1.0.8", features = ["alloc"] }
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
itertools = "0.12.0"